# DataDictionary

./: .gitignore  CLAUDE.md  README.md  mdc_encyclopedia.db  pyproject.toml
.github/workflows/: encyclopedia.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md
.planning/debug/: pull-inserts-zero-records.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md
.planning/milestones/v1.0-phases/01-foundation/: 01-01-SUMMARY.md  01-02-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md
.planning/milestones/v1.0-phases/02-data-ingestion/: 02-01-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-UAT.md
.planning/milestones/v1.0-phases/03-ai-enrichment/: 03-01-PLAN.md  03-CONTEXT.md  03-RESEARCH.md  03-VERIFICATION.md
.planning/milestones/v1.0-phases/04-quality-audit/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md
.planning/milestones/v1.0-phases/05-change-detection/: 05-01-PLAN.md  05-01-SUMMARY.md
.planning/milestones/v1.0-phases/06-static-site/: 06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-04-SUMMARY.md  06-05-SUMMARY.md  06-RESEARCH.md
.planning/milestones/v1.0-phases/07-deployment/: 07-02-PLAN.md  07-02-SUMMARY.md  07-CONTEXT.md  07-RESEARCH.md
.planning/milestones/v1.1-phases/08-multi-jurisdiction-foundation/: 08-02-PLAN.md  08-02-SUMMARY.md  (+1 more)
.planning/phases/01-foundation/: 01-01-PLAN.md  01-02-PLAN.md  01-VERIFICATION.md
.planning/phases/02-data-ingestion/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-UAT.md  02-VERIFICATION.md
.planning/phases/03-ai-enrichment/: 03-01-SUMMARY.md  03-02-PLAN.md  03-02-SUMMARY.md
.planning/phases/04-quality-audit/: 04-CONTEXT.md  04-RESEARCH.md  04-VERIFICATION.md
.planning/phases/05-change-detection/: 05-02-PLAN.md  05-02-SUMMARY.md  05-CONTEXT.md  05-RESEARCH.md  05-VERIFICATION.md
.planning/phases/06-static-site/: 06-01-PLAN.md  06-01-SUMMARY.md  06-03-SUMMARY.md  06-04-PLAN.md  06-05-PLAN.md  06-CONTEXT.md  06-VERIFICATION.md
.planning/phases/07-deployment/: 07-01-PLAN.md  07-01-SUMMARY.md  07-VERIFICATION.md
.planning/phases/08-multi-jurisdiction-foundation/: 08-01-PLAN.md  08-01-SUMMARY.md  08-CONTEXT.md  08-RESEARCH.md
.planning/phases/10-enriched-catalog-export/: 10-CONTEXT.md  10-RESEARCH.md
.planning/phases/11-ai-field-level-descriptions/: 11-01-PLAN.md  11-02-SUMMARY.md  11-CONTEXT.md  11-RESEARCH.md  11-VERIFICATION.md
.planning/phases/12-site-ui-polish-ci-pipeline/: 12-01-PLAN.md  12-01-SUMMARY.md  12-02-PLAN.md  12-02-SUMMARY.md  12-RESEARCH.md  12-VERIFICATION.md
.planning/phases/13-tech-debt-jurisdiction-column-preservation/: 13-01-SUMMARY.md  13-CONTEXT.md  13-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/mdc_encyclopedia/: __init__.py  cli.py  db.py  jurisdictions.yaml  registry.py
src/mdc_encyclopedia/audit/: __init__.py  scorer.py
src/mdc_encyclopedia/diff/: detector.py
src/mdc_encyclopedia/enrichment/: client.py  models.py  prompts.py
src/mdc_encyclopedia/ingestion/: field_fetcher.py  hub_client.py  normalizer.py
src/mdc_encyclopedia/site/: __init__.py  catalog_export.py  context.py  feed.py  generator.py  search_index.py
(+24 files in other folders)
